# config-sources

./: README.md  pyproject.toml
_scripts/: update_config.py
flash/: .version  config.Ixml.Battlepass_reward.xml  config.Ixml.Battlepass_shop.xml  config.Ixml.Battlepass_task.xml  config.Ixml.ExchangeXMLInfo.xml  config.Ixml.Map_h5.xml  config.Ixml.Pvp_achieve.xml  config.Ixml.Pvp_ban.xml  config.Ixml.Pvp_reward.xml  config.Ixml.Pvp_shop.xml  config.Ixml.Pvp_task.xml  config.Ixml.Pvp_vote.xml  config.Ixml.Pvp_vote1.xml  config.Ixml.Starmaplist_h5.xml  config.Ixml.SuitSaleXmlInfo.xml  config.PetStatusEffectConfig.xml  config.xml.AchieveXMLInfo.xml  config.xml.Activity_ShopConfigXmlInfo.xml  config.xml.Activity_TaskConfigXmlInfo.xml  config.xml.AttireconversionXMLInfo.xml  config.xml.AttirerecycleXMLinfo.xml  config.xml.BoxordinaryXmlInfo.xml  config.xml.CountermarkXMLInfo.xml  config.xml.CountermarkXMLInfo1.xml  config.xml.DiamondTask2022XMLInfo_Gift.xml  config.xml.EffectDesXmlInfo.xml  config.xml.EnergyCollectXMLInfo.xml  config.xml.GoldProductXMLInfo.xml  config.xml.HelpTipXMLInfo_helpTip.xml  config.xml.ItemSeXMLInfo.xml  config.xml.ItemTipXMLInfo.xml  config.xml.ItemUseXMLInfo.xml  config.xml.ItemXMLInfo_tye.xml  config.xml.MarkJackpotXmlInfo.xml  config.xml.ModulesToRemoveXMLInfo.xml  config.xml.MoneyProductXMLInfo.xml  config.xml.NewSuperdesignXmlInfo.xml  config.xml.NewTaiTanHoleXmlInfo.xml  config.xml.NoticeCenterXmlInfo.xml  config.xml.NoticeCenterXmlInfo1.xml  (+26 more)
html5/: .version  cloth_transform.json  festival_version_controller.json  guide.json  xml.json  (+1 more)
(+256 files in other folders)
