[project]
name = "config-source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.45",
    "httpx>=0.28.1",
    "pytz>=2025.2",
    "solaris",
    "xmltodict>=1.0.2",
]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.uv.sources]
solaris = { git = "https://github.com/SeerAPI/solaris" }
